--- a/shippable.yml
+++ b/shippable.yml
@@ -10,6 +10,7 @@ install:
 # Create a DB as part of before script to use it
 
 before_script:
+  - psql -v
   - psql -c 'create database test;' -U postgres
   - mkdir -p shippable/testresults
   - mkdir -p shippable/codecoverage
